--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,15 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Events from "../components/Events.astro";
+import Faq from "../components/Faq.astro";
+import Guide from "../components/Guide.astro";
+import Hero from "../components/Hero.astro";
+import Kort from "../components/Kort.astro";
+import Plakat from "../components/Plakat.astro";
+import Video from "../components/Video.astro";
+import Layout from "../layouts/Layout.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<Layout />
