--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -30,16 +30,14 @@ const faqs = [
 <style>
   .faq-container {
     background-color: #496350;
-    padding: 2rem;
-    border-radius: 1rem;
-    font-family: sans-serif;
+    padding: 1rem;
   }
 
   h2 {
     color: white;
     font-size: 1.8rem;
     font-weight: bold;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2.5rem;
     text-align: center;
   }
 
@@ -60,7 +58,9 @@ const faqs = [
   .faq-question {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-weight: bold;
+    font-size: 1rem;
   }
 
   .faq-answer {
@@ -83,6 +83,22 @@ const faqs = [
 
   .faq-item.active .plus {
     transform: rotate(45deg); /* plus bliver til et kryds */
+  }
+  @media screen and (min-width: 768px) {
+    .faq-container {
+      padding: 4rem;
+    }
+    .faq-question {
+      font-size: 1.4rem;
+    }
+    .faq-item {
+      margin-bottom: 1.2rem;
+    }
+
+    h2 {
+      font-size: 3.8rem;
+      margin-bottom: 3.5rem;
+    }
   }
 </style>
 
