--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Events from "../components/Events.astro";
 import Faq from "../components/Faq.astro";
+import Footer from "../components/Footer.astro";
 import Guide from "../components/Guide.astro";
 import Hero from "../components/Hero.astro";
 import Kort from "../components/Kort.astro";
@@ -12,5 +13,9 @@ import Layout from "../layouts/Layout.astro";
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout />
-<Faq />
+<html>
+  <body>
+    <Faq />
+    <Layout />
+  </body>
+</html>
