--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -29,7 +29,7 @@ const faqs = [
 
 <style>
   .faq-container {
-    background-color: #496350;
+    background-color: #506e5c;
     padding: 1rem;
   }
 
