--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -44,7 +44,9 @@ import PinIcon from "/public/billeder/pin.png";
         andre til swap events, workshops og talks om bæredygtig stil. Kom og vær
         med til at dele, lære og inspirere!
       </p>
-      <a href="/events" class="event-link">Læs mere om vores events her</a>
+      <a href="/src/pages/begivenheder.astro" class="event-link"
+        >Læs mere om vores events her</a
+      >
     </div>
   </div>
 </section>
@@ -64,7 +66,7 @@ import PinIcon from "/public/billeder/pin.png";
   .content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
     align-items: center;
   }
 
@@ -83,6 +85,7 @@ import PinIcon from "/public/billeder/pin.png";
   .marker {
     position: absolute;
     width: 35px;
+    transform: translate(-50%, -100%);
   }
 
   .text {
@@ -101,17 +104,18 @@ import PinIcon from "/public/billeder/pin.png";
     text-decoration: underline;
   }
 
-  /* 💻 Desktop layout */
+  /* 💻 Desktop layout fix */
   @media (min-width: 768px) {
     .content {
-      flex-direction: row;
-      align-items: flex-start;
+      flex-direction: row-reverse;
       justify-content: center;
-      gap: 3rem;
+      align-items: flex-start;
+      text-align: left;
     }
 
     .text {
-      padding: 0;
+      text-align: left;
+      padding-left: 2rem;
     }
   }
 </style>
