--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+
 import Events from "../components/Events.astro";
 import Faq from "../components/Faq.astro";
 import Footer from "../components/Footer.astro";
@@ -9,14 +10,13 @@ import Plakat from "../components/Plakat.astro";
 import Video from "../components/Video.astro";
 import Layout from "../layouts/Layout.astro";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <html>
   <body>
+    <Layout>
     <Kort />
     <Faq />
-    <Layout />
+    </Layout>
   </body>
 </html>
