--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,5 +19,9 @@ import "../ccs/global.css";
       <Kort />
       <Faq />
     </Layout>
+    <Layout>
+      <Kort />
+      <Faq />
+    </Layout>
   </body>
 </html>
