tilføjer video, font mm

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Plakat from "../components/Plakat.astro";
 import Video from "../components/Video.astro";
 import Layout from "../layouts/Layout.astro";
 import "../ccs/global.css";
+import "../ccs/global.css";
 ---
 
 <html>
@@ -20,6 +21,9 @@ import "../ccs/global.css";
       <Faq />
     </Layout>
     <Layout>
+      <Kort />
+      <Faq />
+      <Video />
       <Kort />
       <Faq />
     </Layout>
