tilføjer video, font mm

--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,1 +1,15 @@
+---
 
+---
+
+<video autoplay muted loop playsinline class="forside-video">
+  <source src="/public/videoer/Herocomputer.mp4" type="video/mp4" />
+</video>
+<style>
+  .forside-video {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+</style>
