--- a/src/ccs/global.css
+++ b/src/ccs/global.css
@@ -1,1 +1,12 @@
-
+@font-face {
+  font-family: "optima";
+  src: url("/public/fonts/optima") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+body {
+  font-family: "IBM Plex Sans", sans-serif;
+}
+h2 {
+  font-family: "optima", sans-serif;
+}
