--- a/src/pages/begivenheder.astro
+++ b/src/pages/begivenheder.astro
@@ -1,1 +1,17 @@
+---
+import Begivenhedsmap from "../components/BegivenhedsMap.astro";
+import Layout from "../layouts/Layout.astro";
+import Cards from "../components/Card.astro";
+import Lokalomraade from "../components/Lokalomraade.astro";
+---
 
+
+<html>
+  <body>
+    <Layout>
+    <Begivenhedsmap/>
+    <Cards/>
+    <Lokalomraade/>
+    </Layout>
+  </body>
+</html>
