added fonts to begivenheder.astro

--- a/src/pages/begivenheder.astro
+++ b/src/pages/begivenheder.astro
@@ -3,6 +3,7 @@ import Begivenhedsmap from "../components/BegivenhedsMap.astro";
 import Layout from "../layouts/Layout.astro";
 import Cards from "../components/Card.astro";
 import Lokalomraade from "../components/Lokalomraade.astro";
+import "../ccs/global.css";
 ---
 
 
